--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.6",
-    "@types/node": "11.9.4",
+    "@types/node": "^11.9.5",
     "@types/react": "16.8.4",
     "@types/react-dom": "16.8.2",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-scripts": "2.1.5",
-    "typescript": "3.3.3"
+    "typescript": "^3.3.3333"
   },
   "keywords": [
     "react",
